--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-    "name":"application_name",
-    "version":"0.0.0",
-    "description":"web application template",
-    "main":"server.js",
-    "directories":{
-        "test":"test"
+    "name": "WebAppTemplate",
+    "version": "0.0.0",
+    "dependencies": { },
+    "devDependencies": {
+        "grunt": "~0.4.1",
+        "grunt-contrib-copy": "~0.4.1",
+        "grunt-contrib-concat": "~0.1.3",
+        "grunt-contrib-coffee": "~0.6.5",
+        "grunt-contrib-uglify": "~0.2.0",
+        "grunt-contrib-compass": "~0.2.0",
+        "grunt-contrib-jshint": "~0.4.1",
+        "grunt-contrib-cssmin": "~0.6.0",
+        "grunt-contrib-connect": "~0.2.0",
+        "grunt-contrib-clean": "~0.4.0",
+        "grunt-contrib-htmlmin": "~0.1.3",
+        "grunt-bower-requirejs": "~0.4.1",
+        "grunt-contrib-requirejs": "~0.4.0",
+        "grunt-contrib-imagemin": "~0.1.3",
+        "grunt-contrib-watch": "~0.4.0",
+        "grunt-rev": "~0.1.0",
+        "grunt-usemin": "~0.1.10",
+        "grunt-mocha": "~0.3.0",
+        "grunt-open": "~0.2.0",
+        "grunt-svgmin": "~0.1.0",
+        "grunt-concurrent": "~0.1.0",
+        "matchdep": "~0.1.1",
+        "connect-livereload": "~0.1.4",
+        "grunt-connect-proxy": "0.1.5"
     },
-    "dependencies":{
-        "brunch":"~1.4.2",
-        "express":"~3.0.0rc3",
-        "socket":"0.0.1",
-        "less-brunch":"~1.4.0",
-        "uglify-js-brunch":"~1.3.1",
-        "handlebars-brunch":">= 1.0 < 1.4",
-        "javascript-brunch":"~1.3.0",
-        "css-brunch":"~1.3.0",
-        "auto-reload-brunch":"~1.3.2",
-        "clean-css-brunch":"~1.3.0",
-        "http-proxy":"~0.8.3"
-    },
-    "scripts":{
-        "start":"brunch watch -c config.coffee -s",
-        "watch":"brunch watch -c watch_config.coffee"
-    },
-    "repository":"https://github.com/cancerregulome",
-    "author":"Cancer Regulome",
-    "license":"BSD"
+    "engines": {
+        "node": ">=0.8.0"
+    }
 }
