--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,19 @@
 {
-    "name": "WebAppTemplate",
-    "version": "0.0.0",
-    "dependencies": {
-        "requirejs": "~2.1.4",
-        "backbone": "~1.0.0",
-        "modernizr": "~2.6.2",
-        "require-handlebars-plugin": "git://github.com/SlexAxton/require-handlebars-plugin.git#~0.4.0",
-        "handlebars": "git://github.com/components/handlebars.js#~1.0.0-rc.3",
-        "jquery": "~2.0.2",
-        "underscore": "~1.4.4",
-        "d3": "~3.2.0",
-        "jquery-ui": "~1.10.3",
-        "jquery-ui-bootstrap": "~0.2.5",
-        "jquery-event-drag" : "https://raw.github.com/threedubmedia/jquery.threedubmedia/master/event.drag/jquery.event.drag.js",
-        "jquery-event-drop" : "https://raw.github.com/threedubmedia/jquery.threedubmedia/master/event.drop/jquery.event.drop.js"
-        "sass-bootstrap": "~2.3.2"
-      }
+  "name": "WebAppTemplate",
+  "version": "0.0.0",
+  "dependencies": {
+    "requirejs": "~2.1.4",
+    "backbone": "~1.0.0",
+    "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
+    "font-awesome": "~3.2.1",
+    "modernizr": "~2.6.2",
+    "require-handlebars-plugin": "git://github.com/SlexAxton/require-handlebars-plugin.git#~0.4.0",
+    "handlebars": "git://github.com/components/handlebars.js#~1.0.0-rc.3",
+    "jquery": "~2.0.2",
+    "underscore": "~1.4.4",
+    "d3": "~3.2.5",
+    "jquery-ui": "~1.10.3",
+    "jquery-ui-bootstrap": "~0.2.5",
+     "visquick": "git://github.com/visquick/visquick"
+  }
 }
