--- a/bower.json
+++ b/bower.json
@@ -4,16 +4,20 @@
   "dependencies": {
     "requirejs": "~2.1.4",
     "backbone": "~1.0.0",
-    "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
+    "bootstrap": "http://getbootstrap.com/2.3.2/assets/bootstrap.zip",
     "font-awesome": "~3.2.1",
     "modernizr": "~2.6.2",
     "require-handlebars-plugin": "git://github.com/SlexAxton/require-handlebars-plugin.git#~0.4.0",
-    "handlebars": "git://github.com/components/handlebars.js#~1.0.0-rc.3",
-    "jquery": "~2.0.2",
+    "handlebars": "git://github.com/components/handlebars.js#~1.0.0",
+    "jquery": "~2.0.3",
     "underscore": "~1.4.4",
-    "d3": "~3.2.0",
+    "d3": "~3.2.8",
     "jquery-ui": "~1.10.3",
     "jquery-ui-bootstrap": "~0.2.5",
-     "visquick": "git://github.com/visquick/visquick"
+    "visquick": "git://github.com/visquick/visquick"
+  },
+  "resolutions": {
+    "jquery": "~2.0.3",
+    "d3": "~3.2.8"
   }
 }
